changes to backend for employer and amends